versions/0.8.0/_sources/refs/_aws-cdk_aws-ses.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"qNoG63OkgMm1NwbrKrofB/RvXeONNFm+cgltN7OaAnA="}

@aws-cdk/aws-ses
================

.. mdinclude:: ./__aws-cdk_aws-ses.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-ses


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-ses.cloudformation

ConfigurationSetEventDestinationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationSetEventDestinationResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigurationSetEventDestinationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigurationSetEventDestinationResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: CloudWatchDestinationProperty



      .. py:attribute:: dimensionConfigurations

         ``ConfigurationSetEventDestinationResource.CloudWatchDestinationProperty.DimensionConfigurations``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-cloudwatchdestination.html#cfn-ses-configurationseteventdestination-cloudwatchdestination-dimensionconfigurations


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResource.DimensionConfigurationProperty` or undefined


   .. py:class:: DimensionConfigurationProperty



      .. py:attribute:: defaultDimensionValue

         ``ConfigurationSetEventDestinationResource.DimensionConfigurationProperty.DefaultDimensionValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-dimensionconfiguration.html#cfn-ses-configurationseteventdestination-dimensionconfiguration-defaultdimensionvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: dimensionName

         ``ConfigurationSetEventDestinationResource.DimensionConfigurationProperty.DimensionName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-dimensionconfiguration.html#cfn-ses-configurationseteventdestination-dimensionconfiguration-dimensionname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: dimensionValueSource

         ``ConfigurationSetEventDestinationResource.DimensionConfigurationProperty.DimensionValueSource``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-dimensionconfiguration.html#cfn-ses-configurationseteventdestination-dimensionconfiguration-dimensionvaluesource


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: EventDestinationProperty



      .. py:attribute:: cloudWatchDestination

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.CloudWatchDestination``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-cloudwatchdestination


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResource.CloudWatchDestinationProperty` or undefined


      .. py:attribute:: enabled

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: kinesisFirehoseDestination

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.KinesisFirehoseDestination``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-kinesisfirehosedestination


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty` or undefined


      .. py:attribute:: matchingEventTypes

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.MatchingEventTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-matchingeventtypes


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: name

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: KinesisFirehoseDestinationProperty



      .. py:attribute:: deliveryStreamArn

         ``ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty.DeliveryStreamARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-kinesisfirehosedestination.html#cfn-ses-configurationseteventdestination-kinesisfirehosedestination-deliverystreamarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: iamRoleArn

         ``ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty.IAMRoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-kinesisfirehosedestination.html#cfn-ses-configurationseteventdestination-kinesisfirehosedestination-iamrolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ConfigurationSetEventDestinationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationSetEventDestinationResourceProps



   .. py:attribute:: configurationSetName

      ``AWS::SES::ConfigurationSetEventDestination.ConfigurationSetName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-configurationseteventdestination.html#cfn-ses-configurationseteventdestination-configurationsetname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: eventDestination

      ``AWS::SES::ConfigurationSetEventDestination.EventDestination``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-configurationseteventdestination.html#cfn-ses-configurationseteventdestination-eventdestination


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResource.EventDestinationProperty`


ConfigurationSetResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationSetResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigurationSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigurationSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ConfigurationSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationSetResourceProps



   .. py:attribute:: configurationSetName

      ``AWS::SES::ConfigurationSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-configurationset.html#cfn-ses-configurationset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ReceiptFilterResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptFilterResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReceiptFilterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReceiptFilterResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptFilterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FilterProperty



      .. py:attribute:: ipFilter

         ``ReceiptFilterResource.FilterProperty.IpFilter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptfilter-filter.html#cfn-ses-receiptfilter-filter-ipfilter


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptFilterResource.IpFilterProperty`


      .. py:attribute:: name

         ``ReceiptFilterResource.FilterProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptfilter-filter.html#cfn-ses-receiptfilter-filter-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: IpFilterProperty



      .. py:attribute:: cidr

         ``ReceiptFilterResource.IpFilterProperty.Cidr``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptfilter-ipfilter.html#cfn-ses-receiptfilter-ipfilter-cidr


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: policy

         ``ReceiptFilterResource.IpFilterProperty.Policy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptfilter-ipfilter.html#cfn-ses-receiptfilter-ipfilter-policy


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ReceiptFilterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptFilterResourceProps



   .. py:attribute:: filter

      ``AWS::SES::ReceiptFilter.Filter``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptfilter.html#cfn-ses-receiptfilter-filter


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptFilterResource.FilterProperty`


ReceiptRuleResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptRuleResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReceiptRuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReceiptRuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ActionProperty



      .. py:attribute:: addHeaderAction

         ``ReceiptRuleResource.ActionProperty.AddHeaderAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-addheaderaction


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.AddHeaderActionProperty` or undefined


      .. py:attribute:: bounceAction

         ``ReceiptRuleResource.ActionProperty.BounceAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-bounceaction


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.BounceActionProperty` or undefined


      .. py:attribute:: lambdaAction

         ``ReceiptRuleResource.ActionProperty.LambdaAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-lambdaaction


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.LambdaActionProperty` or undefined


      .. py:attribute:: s3Action

         ``ReceiptRuleResource.ActionProperty.S3Action``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-s3action


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.S3ActionProperty` or undefined


      .. py:attribute:: snsAction

         ``ReceiptRuleResource.ActionProperty.SNSAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-snsaction


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.SNSActionProperty` or undefined


      .. py:attribute:: stopAction

         ``ReceiptRuleResource.ActionProperty.StopAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-stopaction


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.StopActionProperty` or undefined


      .. py:attribute:: workmailAction

         ``ReceiptRuleResource.ActionProperty.WorkmailAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-workmailaction


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.WorkmailActionProperty` or undefined


   .. py:class:: AddHeaderActionProperty



      .. py:attribute:: headerName

         ``ReceiptRuleResource.AddHeaderActionProperty.HeaderName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-addheaderaction.html#cfn-ses-receiptrule-addheaderaction-headername


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: headerValue

         ``ReceiptRuleResource.AddHeaderActionProperty.HeaderValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-addheaderaction.html#cfn-ses-receiptrule-addheaderaction-headervalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: BounceActionProperty



      .. py:attribute:: message

         ``ReceiptRuleResource.BounceActionProperty.Message``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-message


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sender

         ``ReceiptRuleResource.BounceActionProperty.Sender``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-sender


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: smtpReplyCode

         ``ReceiptRuleResource.BounceActionProperty.SmtpReplyCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-smtpreplycode


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: statusCode

         ``ReceiptRuleResource.BounceActionProperty.StatusCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-statuscode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.BounceActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: LambdaActionProperty



      .. py:attribute:: functionArn

         ``ReceiptRuleResource.LambdaActionProperty.FunctionArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-lambdaaction.html#cfn-ses-receiptrule-lambdaaction-functionarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: invocationType

         ``ReceiptRuleResource.LambdaActionProperty.InvocationType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-lambdaaction.html#cfn-ses-receiptrule-lambdaaction-invocationtype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.LambdaActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-lambdaaction.html#cfn-ses-receiptrule-lambdaaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: RuleProperty



      .. py:attribute:: actions

         ``ReceiptRuleResource.RuleProperty.Actions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-actions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.ActionProperty` or undefined


      .. py:attribute:: enabled

         ``ReceiptRuleResource.RuleProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``ReceiptRuleResource.RuleProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: recipients

         ``ReceiptRuleResource.RuleProperty.Recipients``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-recipients


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: scanEnabled

         ``ReceiptRuleResource.RuleProperty.ScanEnabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-scanenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: tlsPolicy

         ``ReceiptRuleResource.RuleProperty.TlsPolicy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-tlspolicy


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: S3ActionProperty



      .. py:attribute:: bucketName

         ``ReceiptRuleResource.S3ActionProperty.BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-s3action.html#cfn-ses-receiptrule-s3action-bucketname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: kmsKeyArn

         ``ReceiptRuleResource.S3ActionProperty.KmsKeyArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-s3action.html#cfn-ses-receiptrule-s3action-kmskeyarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: objectKeyPrefix

         ``ReceiptRuleResource.S3ActionProperty.ObjectKeyPrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-s3action.html#cfn-ses-receiptrule-s3action-objectkeyprefix


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.S3ActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-s3action.html#cfn-ses-receiptrule-s3action-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SNSActionProperty



      .. py:attribute:: encoding

         ``ReceiptRuleResource.SNSActionProperty.Encoding``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-snsaction.html#cfn-ses-receiptrule-snsaction-encoding


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.SNSActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-snsaction.html#cfn-ses-receiptrule-snsaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: StopActionProperty



      .. py:attribute:: scope

         ``ReceiptRuleResource.StopActionProperty.Scope``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-stopaction.html#cfn-ses-receiptrule-stopaction-scope


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.StopActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-stopaction.html#cfn-ses-receiptrule-stopaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: WorkmailActionProperty



      .. py:attribute:: organizationArn

         ``ReceiptRuleResource.WorkmailActionProperty.OrganizationArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-workmailaction.html#cfn-ses-receiptrule-workmailaction-organizationarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.WorkmailActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-workmailaction.html#cfn-ses-receiptrule-workmailaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



ReceiptRuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptRuleResourceProps



   .. py:attribute:: rule

      ``AWS::SES::ReceiptRule.Rule``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptrule.html#cfn-ses-receiptrule-rule


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.RuleProperty`


   .. py:attribute:: ruleSetName

      ``AWS::SES::ReceiptRule.RuleSetName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptrule.html#cfn-ses-receiptrule-rulesetname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: after

      ``AWS::SES::ReceiptRule.After``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptrule.html#cfn-ses-receiptrule-after


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ReceiptRuleSetResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptRuleSetResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReceiptRuleSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReceiptRuleSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleSetResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ReceiptRuleSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptRuleSetResourceProps



   .. py:attribute:: ruleSetName

      ``AWS::SES::ReceiptRuleSet.RuleSetName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptruleset.html#cfn-ses-receiptruleset-rulesetname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


TemplateResource
~~~~~~~~~~~~~~~~

.. py:class:: TemplateResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TemplateResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TemplateResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.TemplateResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: TemplateProperty



      .. py:attribute:: htmlPart

         ``TemplateResource.TemplateProperty.HtmlPart``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-template-template.html#cfn-ses-template-template-htmlpart


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: subjectPart

         ``TemplateResource.TemplateProperty.SubjectPart``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-template-template.html#cfn-ses-template-template-subjectpart


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: templateName

         ``TemplateResource.TemplateProperty.TemplateName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-template-template.html#cfn-ses-template-template-templatename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: textPart

         ``TemplateResource.TemplateProperty.TextPart``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-template-template.html#cfn-ses-template-template-textpart


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



TemplateResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TemplateResourceProps



   .. py:attribute:: template

      ``AWS::SES::Template.Template``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-template.html#cfn-ses-template-template


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ses.cloudformation.TemplateResource.TemplateProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-ses

